# OS_Project_2

./: notes.txt
imu_driver/: CMakeLists.txt
imu_driver/include/: imu_driver.h
imu_driver/src/: imu_driver.c  main.c
supervisor/: CMakeLists.txt
